--- a/ageCalculator.html
+++ b/ageCalculator.html
@@ -26,5 +26,6 @@
             <div id="age"></div>
         </form>
     </div>
+     <script src="/ageCalculator.js"></script>
 </body>
 <link rel="stylesheet" href="ageCalculator.css">
